fix(content-section): preserve white space only in pre, not code (#858)

--- a/components/content-section/server.css
+++ b/components/content-section/server.css
@@ -82,8 +82,11 @@
   pre,
   code {
     font-family: var(--font-family-code);
-    white-space: pre-wrap;
     background-color: var(--color-background-secondary);
+  }
+
+  pre {
+    white-space: pre-wrap;
   }
 
   pre:not(.code-example pre) {
